syntax = "proto3";
package MonikPackage;

option csharp_namespace = "Monik.Common";

message Event
{
	sint64 created = 1; // milliseconds
	string source = 2; // Role Name, Application Name, Service Name, etc
	string instance = 3; // Instance of the source

	oneof msg
	{
		KeepAlive ka = 4;
		Log lg = 5;
		PerfCounter pc = 6;
		Metric mc = 7;
		// TODO: need reserve for future extensions ??
	}
}

message KeepAlive 
{
	 uint32 interval = 1; // seconds
}

enum LevelType 
{
    SYSTEM = 0;
    APPLICATION = 10;
    LOGIC = 20;
	SECURITY = 30;
}

enum SeverityType 
{
	FATAL = 0;
	ERROR = 10;
	WARNING = 20;
	INFO = 30;
	VERBOSE = 40;
}

enum FormatType 
{
    PLAIN = 0;
    JSON = 10;
    XML = 20;
}

message Log 
{
  LevelType level = 1;
  SeverityType severity = 2;

  FormatType format = 3;
  string body = 4;
  
  string tags = 5; // users tags or categories
}

message PerfCounter
{
  // TODO
}

enum AggregationType
{
  ACCUMULATOR = 0;
  GAUGE = 10;
  // TODO: UNIQUE VALUES COUNT IN WINDOW
}

message Metric
{
  string name = 1;
  AggregationType aggregation = 2;
  double value = 3;
}
